...
        
    }
    
    /***
     Toggle Button title on Show State
     */
    @IBInspectable var onShowToggleText: String = "SHOW"{
        willSet(title){
            toggle.setTitle(title, for: .normal)
        }
        
    }
    
    /***
     Toggle Button title on Hide State
     */
    @IBInspectable var onHideToggleText: String = "HIDE"{
        willSet(title){
            toggle.setTitle(title, for: .selected)
        }
        
    }
    //Contains Original Text without masking
...
