...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="blp-xC-o3g" customClass="CustomPasswordTextField" customModule="CustomPasswordTextField" customModuleProvider="targe
                                <rect key="frame" x="20" y="55" width="335" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="customPasswordTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="6e4-cC-tbM"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
...
