//
//  CustomPasswordTextFieldUITests.swift
//  CustomPasswordTextFieldUITests
//
//  Created by Aaqib Hussain on 9/8/17.
//  Copyright © 2017 Aaqib Hussain. All rights reserved.
//

import XCTest

class CustomPasswordTextFieldUITests: XCTestCase {
    var app: XCUIApplication!
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        app = XCUIApplication()
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testCustomPasswordTextField() {

       
        let textField = app.textFields["customPasswordTextField"]
        let show = textField.buttons["SHOW"]
        let hide = textField.buttons["HIDE"]
        textField.tap()
        show.tap()
        textField.typeText("Password112")
        XCTAssertEqual(textField.value as! String, "Password112")
        hide.tap()
        show.tap()
        hide.tap()
        show.tap()
        hide.tap()
        
    }
    
}
